[metadata]
name = linglit
version = 0.1.0
author = ''
author_email = robert_forkel@eva.mpg.de
description = Programmatic access to linguistic literature
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    clldutils >= 3.12
    attrs
    csvw
    requests
    pylatexenc
    bs4
    lxml
    pyglottolog
    pycldf
    thefuzz[speedup]
    unidecode

include_package_data = True

[options.package_data]
clldappconfig = cfg/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
    build
    twine
test =
    pytest >= 4.6
    pytest-cov
    tox

[tool:pytest]
minversion = 3.3
testpaths = tests
addopts = --cov=linglit --cov-report=term-missing

[flake8]
ignore = E126, E128, E731, W503
max-line-length = 100
exclude = .tox

[tox:tox]
envlist = py37, py38, py39, py310, flake
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}

[testenv:flake]
basepython = python3.8
deps = .[dev]
commands = flake8 src/ tests/
