[metadata]
name = linglit
version = 0.3.0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = Programmatic access to linguistic literature
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    clldutils >= 3.12
    attrs
    csvw
    TexSoup
    pylatexenc
    bs4
    lxml
    pyglottolog
    pycldf
    pyigt>=1.4
    thefuzz
    unidecode

[options.entry_points]
console_scripts =
    linglit = linglit.__main__:main

[options.package_data]
linglit = cfg/*/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
    build
    twine
test =
    pytest >= 4.6
    pytest-cov
    pytest-mock
    tox
speedup =
    thefuzz[speedup]

[tool:pytest]
minversion = 3.3
testpaths = tests
addopts = --cov=linglit --cov-report=term-missing
filterwarnings =
    ignore::UserWarning

[coverage:report]
show_missing = true
skip_covered = true

[flake8]
ignore = E126, E128, E731, W503
max-line-length = 100
exclude = .tox

[tox:tox]
envlist = py37, py38, py39, py310
isolated_build = false
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
